--- a/index.html
+++ b/index.html
@@ -46,21 +46,27 @@
                 type="button"
                 title="pink"></button>
       </div>
-      <nav id="navigationbar" class="navigationbar">
+      <nav id="navigationbar"
+           class="navigationbar">
         <img src="./images/profile_photo.png"
              alt="Me" />
         <h1>Software-Developer</h1>
         <p>Sandeep-Kumar</p>
         <a href="#page1"
-           id="home" class="navLink"><strong>Home</strong> </a>
+           id="home"
+           class="navLink"><strong>Home</strong> </a>
         <a href="#page2"
-           id="about"class="navLink"><strong>About</strong></a>
+           id="about"
+           class="navLink"><strong>About</strong></a>
         <a href="#page3"
-           id="education"class="navLink"><strong>Education</strong></a>
+           id="education"
+           class="navLink"><strong>Education</strong></a>
         <a href="#page4"
-           id="skills"class="navLink"><strong>Skills</strong></a>
+           id="skills"
+           class="navLink"><strong>Skills</strong></a>
         <a href="#page5"
-           id="contact"class="navLink"><strong>Contact</strong></a>
+           id="contact"
+           class="navLink"><strong>Contact</strong></a>
       </nav>
     </header>
 
@@ -70,7 +76,7 @@
         <div id="content">
           <p>Hey there</p>
           <p>My name is <span>Sandeep Kumar</span></p>
-          <p id="software-developer">I am a <span>Software Developer</span></p>
+          <p id="profesion">I am a <span id="dynamic-text">Software Developer</span></p>
         </div>
         <button id="hire-button"
                 type="button">Hire Me</button>
@@ -119,7 +125,7 @@
       </section>
       <section class="pages page3"
                id="page3">
-
+        <h1 id="heading-page3">Education</h1>
         <div class="cards-container"
              id="cards-container">
           <div class="card1 cards"
